fix(textarea): add proper structure, padding and spacing

--- a/core/src/components/textarea/textarea.ionic.outline.scss
+++ b/core/src/components/textarea/textarea.ionic.outline.scss
@@ -6,10 +6,30 @@
 
 :host(.textarea-fill-outline) {
   --border-radius: #{globals.$ionic-border-radius-400};
-  --padding-top: #{globals.$ionic-space-400};
-  --padding-end: #{globals.$ionic-space-500};
-  --padding-bottom: #{globals.$ionic-space-400};
-  --padding-start: #{globals.$ionic-space-500};
+  --padding-top: #{globals.$ionic-space-300};
+  --padding-end: #{globals.$ionic-space-400};
+  --padding-bottom: #{globals.$ionic-space-300};
+  --padding-start: #{globals.$ionic-space-400};
+}
+
+// Textarea Fill: Outline, Textarea Wrapper
+// ----------------------------------------------------------------
+
+:host(.textarea-fill-outline) .textarea-wrapper {
+  gap: #{globals.$ionic-space-100};
+}
+
+:host(.textarea-fill-outline) .textarea-wrapper-inner {
+  /**
+   * The border should be relative to the inner wrapper
+   * so that it does not include the label.
+   */
+  position: relative;
+
+  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
+
+  // Default md height
+  height: globals.$ionic-scale-3400;
 }
 
 // Textarea Fill: Outline, Outline Container
@@ -27,4 +47,63 @@
   pointer-events: none;
 
   border: var(--border-width) var(--border-style) var(--border-color);
+}
+
+// Textarea Fill: Outline, Bottom Content
+// ----------------------------------------------------------------
+
+/**
+ * The bottom content should never have
+ * a border with the outline style.
+ */
+ :host(.textarea-fill-outline) .textarea-bottom {
+  border-top: none;
+
+  @include padding(#{globals.$ionic-space-100}, var(--padding-end), null, var(--padding-start));
+}
+
+// Overrides
+// ----------------------------------------------------------------
+
+// TODO remove the following overrides in favor of splitting
+// to common and native files
+:host(.textarea-fill-outline) textarea {
+  @include margin(0);
+  @include padding(0);
+}
+
+:host(.textarea-fill-outline) .start-slot-wrapper,
+:host(.textarea-fill-outline) .end-slot-wrapper {
+  @include padding(0);
+}
+
+:host(.textarea-fill-outline) ion-icon {
+  @include margin(0);
+}
+
+:host(.textarea-label-placement-stacked) ::slotted([slot="start"]),
+:host(.textarea-label-placement-stacked) ::slotted([slot="end"]),
+:host(.textarea-label-placement-floating) ::slotted([slot="start"]),
+:host(.textarea-label-placement-floating) ::slotted([slot="end"]) {
+  margin-top: 0;
+}
+
+// ----------------------------------------------------------------
+
+// TODO see if there is a better way of doing these
+:host(.textarea-fill-outline) textarea {
+  margin-top: 4px;
+}
+
+:host(.textarea-fill-outline) .start-slot-wrapper,
+:host(.textarea-fill-outline) .end-slot-wrapper {
+  margin-top: 3px;
+}
+
+:host(.textarea-fill-outline) .start-slot-wrapper {
+  margin-inline-start: 1px;
+}
+
+:host(.textarea-fill-outline) .end-slot-wrapper {
+  margin-inline-end: 1px;
 }
